Implement first batch of tweaks to upgrade webapp
* Move javax imports to jakarta
* Add jsp dependency and remove explicit tomcat dependencies
* Add spring boot starter for quartz
* Add spring security ldap module
* Add spring boot starter for security
* Add our own tweaked version of Apache Tiles that supports Java 17+
* Adopt legacy Tiles integration classes from Spring