@@ -37,29 +37,43 @@ call mvn install:install-file -DgroupId=com.anotherbigidea -DartifactId=javaswf 
 rem
 rem Install the other dependencies that exist locally
 
-call call mvn install:install-file -DgroupId=com.ibm -DartifactId=ibmjsse -Dversion=1.0 -Dpackaging=jar -Dfile=wct-core\etc\lib\ibmjsse.jar
-call call mvn install:install-file -DgroupId=JimiProClasses -DartifactId=JimiProClasses -Dversion=1.0 -Dpackaging=jar -Dfile=wct-core\etc\lib\JimiProClasses.jar
-call call mvn install:install-file -DgroupId=org.eclipse.jdt.core -DartifactId=org.eclipse.jdt.core -Dversion=3.7.3 -Dpackaging=jar -Dfile=wct-core\etc\lib\org.eclipse.jdt.core_3.7.3.v20120119-1537.jar
-call call mvn install:install-file -DgroupId=poi-2.0-RC1-20031102 -DartifactId=poi-2.0-RC1-20031102 -Dversion=2.0 -Dpackaging=jar -Dfile=wct-core\etc\lib\poi-2.0-RC1-20031102.jar
-call call mvn install:install-file -DgroupId=smalltext-0.1.4 -DartifactId=smalltext-0.1.4 -Dversion=0.1.4 -Dpackaging=jar -Dfile=wct-core\etc\lib\smalltext-0.1.4.jar
-call call mvn install:install-file -DgroupId=org.archive.wayback -DartifactId=wayback-core -Dversion=1.2.0 -Dpackaging=jar -Dfile=wct-core\etc\lib\wayback-core-1.2.0.jar
-call call mvn install:install-file -DgroupId=it.unimi.dsi -DartifactId=mg4j -Dversion=2.0.1 -Dpackaging=jar -Dfile=wct-core\etc\lib\mg4j-2.0.1.jar
+call mvn install:install-file -DgroupId=com.ibm -DartifactId=ibmjsse -Dversion=1.0 -Dpackaging=jar -Dfile=wct-core\etc\lib\ibmjsse.jar
+call mvn install:install-file -DgroupId=JimiProClasses -DartifactId=JimiProClasses -Dversion=1.0 -Dpackaging=jar -Dfile=wct-core\etc\lib\JimiProClasses.jar
+call mvn install:install-file -DgroupId=org.eclipse.jdt.core -DartifactId=org.eclipse.jdt.core -Dversion=3.7.3 -Dpackaging=jar -Dfile=wct-core\etc\lib\org.eclipse.jdt.core_3.7.3.v20120119-1537.jar
+call mvn install:install-file -DgroupId=poi-2.0-RC1-20031102 -DartifactId=poi-2.0-RC1-20031102 -Dversion=2.0 -Dpackaging=jar -Dfile=wct-core\etc\lib\poi-2.0-RC1-20031102.jar
+call mvn install:install-file -DgroupId=smalltext-0.1.4 -DartifactId=smalltext-0.1.4 -Dversion=0.1.4 -Dpackaging=jar -Dfile=wct-core\etc\lib\smalltext-0.1.4.jar
+call mvn install:install-file -DgroupId=org.archive.wayback -DartifactId=wayback-core -Dversion=1.2.0 -Dpackaging=jar -Dfile=wct-core\etc\lib\wayback-core-1.2.0.jar
+call mvn install:install-file -DgroupId=it.unimi.dsi -DartifactId=mg4j -Dversion=2.0.1 -Dpackaging=jar -Dfile=wct-core\etc\lib\mg4j-2.0.1.jar
 
-call call mvn install:install-file -DgroupId=net.sf -DartifactId=jargs -Dversion=1.0 -Dpackaging=jar -Dfile=wct-core\etc\lib\jargs.jar
+call mvn install:install-file -DgroupId=net.sf -DartifactId=jargs -Dversion=1.0 -Dpackaging=jar -Dfile=wct-core\etc\lib\jargs.jar
 
-call call mvn install:install-file -DgroupId=net.sf -DartifactId=jargs -Dversion=1.0 -Dpackaging=jar -Dfile=wct-core\etc\lib\jargs.jar
+call mvn install:install-file -DgroupId=net.sf -DartifactId=jargs -Dversion=1.0 -Dpackaging=jar -Dfile=wct-core\etc\lib\jargs.jar
 
-call call mvn install:install-file -DgroupId=org.archive -DartifactId=aheritrix -Dversion=1.14.1 -Dpackaging=jar -Dfile=wct-core\etc\lib\aheritrix-1.14.1.jar
+call mvn install:install-file -DgroupId=org.archive -DartifactId=aheritrix -Dversion=1.14.1 -Dpackaging=jar -Dfile=wct-core\etc\lib\aheritrix-1.14.1.jar
 
-call call mvn install:install-file -DgroupId=xdoclet -DartifactId=xdoclet -Dversion=1.2.3-updated -Dpackaging=jar -Dfile=wct-core\etc\xdoclet-1.2.3-updated.jar
-call call mvn install:install-file -DgroupId=xdoclet -DartifactId=xjavadoc -Dversion=1.5-snapshot050611 -Dpackaging=jar -Dfile=wct-core\etc\xjavadoc-1.5-snapshot050611.jar
+call mvn install:install-file -DgroupId=xdoclet -DartifactId=xdoclet -Dversion=1.2.3-updated -Dpackaging=jar -Dfile=wct-core\etc\xdoclet-1.2.3-updated.jar
+call mvn install:install-file -DgroupId=xdoclet -DartifactId=xjavadoc -Dversion=1.5-snapshot050611 -Dpackaging=jar -Dfile=wct-core\etc\xjavadoc-1.5-snapshot050611.jar
 
-call call mvn install:install-file -DgroupId=javassist -DartifactId=javassist -Dversion=2.6.ga -Dpackaging=jar -Dfile=wct-store\etc\lib\javassist-2.6.ga.jar
-call call mvn install:install-file -DgroupId=policy -DartifactId=policy -Dversion=4.2.2.GA -Dpackaging=jar -Dfile=wct-store\etc\lib\policy-4.2.2.GA.jar
+call mvn install:install-file -DgroupId=javassist -DartifactId=javassist -Dversion=2.6.ga -Dpackaging=jar -Dfile=wct-store\etc\lib\javassist-2.6.ga.jar
+call mvn install:install-file -DgroupId=policy -DartifactId=policy -Dversion=4.2.2.GA -Dpackaging=jar -Dfile=wct-store\etc\lib\policy-4.2.2.GA.jar
 
-call call mvn install:install-file -DgroupId=com.exlibris -DartifactId=dps-sdk -Dversion=7.1.0 -Dpackaging=jar -Dfile=wct-submit-to-rosetta/lib/dps-sdk-7.1.0.jar
-call call mvn install:install-file -DgroupId=com.exlibris -DartifactId=dps-sdk-deposit-api -Dversion=7.1.0 -Dpackaging=jar -Dfile=wct-submit-to-rosetta/lib/dps-sdk-deposit-api-7.1.0.jar
+call mvn install:install-file -DgroupId=com.exlibris -DartifactId=dps-sdk -Dversion=7.1.0 -Dpackaging=jar -Dfile=wct-submit-to-rosetta/lib/dps-sdk-7.1.0.jar
+call mvn install:install-file -DgroupId=com.exlibris -DartifactId=dps-sdk-deposit-api -Dversion=7.1.0 -Dpackaging=jar -Dfile=wct-submit-to-rosetta/lib/dps-sdk-deposit-api-7.1.0.jar
 
-# Install the retired libs
-call call mvn install:install-file -DgroupId=org.apache.hadoop -DartifactId=hadoop-core -Dversion=0.20.2-cdh3u4 -Dpackaging=jar -Dfile=libs/hadoop-core-0.20.2-cdh3u4.jar
-call call mvn install:install-file -DgroupId=oracle -DartifactId=ojdbc6 -Dversion=11.2.0.3 -Dpackaging=jar -Dfile=libs/ojdbc6-11.2.0.3.jar
+rem Install the retired libs
+call mvn install:install-file -DgroupId=org.apache.hadoop -DartifactId=hadoop-core -Dversion=0.20.2-cdh3u4 -Dpackaging=jar -Dfile=libs/hadoop-core-0.20.2-cdh3u4.jar
+call mvn install:install-file -DgroupId=oracle -DartifactId=ojdbc6 -Dversion=11.2.0.3 -Dpackaging=jar -Dfile=libs/ojdbc6-11.2.0.3.jar
+
+rem Build our copy of Apache Tiles, tweaked to work with Java 17+
+RD /S /Q .\apache-tiles-legacy
+call git clone https://github.com/WebCuratorTool/apache-tiles-legacy.git 
+cd apache-tiles-legacy\maven
+call mvn -Dmaven.test.skip=true clean install
+cd ..\autotag
+call mvn -Dmaven.test.skip=true clean install
+cd ..\request
+call mvn -Dmaven.test.skip=true clean install
+cd ..\framework
+set MAVEN_OPTS="--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED"
+call mvn -Dmaven.test.skip=true clean install
+
